crates/inertia-macros/tests/ui/fail/invalid_attribute.stderr
error: unsupported inertia container attribute
 --> tests/ui/fail/invalid_attribute.rs:4:30
  |
4 | #[inertia(component = "Bad", controller)]
  |                              ^^^^^^^^^^
